--- a/secondpage.html
+++ b/secondpage.html
@@ -3,3 +3,4 @@
 <img src="https://23tosorio.github.io/love.jpg">
 <img src="https://23tosorio.github.io/birdy.gif">
 <img src="https://23tosorio.github.io/colors.gif">
+<img src="https://23tosorio.github.io/pie.gif">
