--- a/secondpage.html
+++ b/secondpage.html
@@ -6,3 +6,4 @@
 <img src="https://23tosorio.github.io/pie.gif">
 <img src="https://23tosorio.github.io/tubes.gif">
 <h1> how cool are these pics well theres even more fun stuff that will show up soon</h1>
+<img src="https://23tosorio.github.io/rose.gif">
