--- a/secondpage.html
+++ b/secondpage.html
@@ -8,3 +8,4 @@
 <h1> how cool are these pics well theres even more fun stuff that will show up soon and alot of it will be about smoke so hope you think it is cool</h1>
 <img src="https://23tosorio.github.io/rose.gif">
 <img src="https://23tosorio.github.io/tiger.gif">
+<img src="https://23tosorio.github.io/noice.gif">
