--- a/secondpage.html
+++ b/secondpage.html
@@ -5,7 +5,7 @@
 <img src="https://23tosorio.github.io/colors.gif">
 <img src="https://23tosorio.github.io/pie.gif">
 <img src="https://23tosorio.github.io/tubes.gif">
-<h1> how cool are these pics well theres even more fun stuff that will show up soon and alot of it will be about smoke so hope you think it is cool</h1>
+<h1>me trying to dance</h1>
 <img src="https://23tosorio.github.io/rose.gif">
 <img src="https://23tosorio.github.io/tiger.gif">
 <img src="https://23tosorio.github.io/noice.gif">
