--- a/secondpage.html
+++ b/secondpage.html
@@ -9,4 +9,4 @@
 <img src="https://23tosorio.github.io/rose.gif">
 <img src="https://23tosorio.github.io/tiger.gif">
 <img src="https://23tosorio.github.io/noice.gif">
-<img src="https://23tosorio.github.io/trying.gif>
+<img src="https://23tosorio.github.io/trying.gif">
