--- a/secondpage.html
+++ b/secondpage.html
@@ -10,3 +10,4 @@
 <img src="https://23tosorio.github.io/tiger.gif">
 <img src="https://23tosorio.github.io/noice.gif">
 <img src="https://23tosorio.github.io/trying.gif">
+<img src="https://23tosorio.github.io/haters.gif">
