--- a/secondpage.html
+++ b/secondpage.html
@@ -11,3 +11,4 @@
 <img src="https://23tosorio.github.io/noice.gif">
 <img src="https://23tosorio.github.io/trying.gif">
 <img src="https://23tosorio.github.io/haters.gif">
+<h1>wa wa haters gonna hate oh snap</h1>
