--- a/secondpage.html
+++ b/secondpage.html
@@ -11,4 +11,5 @@
 <img src="https://23tosorio.github.io/noice.gif">
 <img src="https://23tosorio.github.io/trying.gif">
 <img src="https://23tosorio.github.io/haters.gif">
-<h1>wa wa haters gonna hate oh snap</h1>
+<h1>what what haters gonna hate oh snap</h1>
+<img src="https://23tosorio.github.io/nap.gif">
