--- a/secondpage.html
+++ b/secondpage.html
@@ -19,3 +19,4 @@
 <img src="https://23tosorio.github.io/monkey.gif">
 <h1>playing in the leafs like monkey love</h1>
 <img src="https://23tosorio.io/pushing.gif">
+<img src="https://23tosorio.giyhub.io/slap.gif">
