--- a/secondpage.html
+++ b/secondpage.html
@@ -18,5 +18,5 @@
 <h1>oh snap look at donalds hair it is flipping and flying like "I believe i can fly i believe i can touch the sky" hahahhahahaha</h1>
 <img src="https://23tosorio.github.io/monkey.gif">
 <h1>playing in the leafs like monkey love</h1>
-<img src="https://23tosorio.io/pushing.gif">
+<img src="https://23tosorio.github.io/pushing.gif">
 <img src="https://23tosorio.giyhub.io/slap.gif">
